@@ -1956,6 +1956,9 @@ function filReleases() {
   var med = media;
   for(var i=0; i<med.length; i++) // l10n /_med_.+/
     med[i] = [ med[i], mt('_med_'+med[i]) ];
+  var ani = animated;
+  for(var i=0; i<ani.length; i++) // l10n /_animated_.+/
+    ani[i] = [ ani[i], mt('_animated_'+ani[i]) ];
   return [
     mt('_rbrowse_fil_title'),
     [ mt('_rbrowse_general'),
@@ -1970,7 +1973,11 @@ function filReleases() {
     [ mt('_rbrowse_language'),   filFSelect('lang', mt('_rbrowse_language'), 20, lang) ],
     [ mt('_rbrowse_resolution'), filFSelect('resolution', mt('_rbrowse_resolution'), 15, resolutions) ],
     [ mt('_rbrowse_platform'),   filFSelect('plat', mt('_rbrowse_platform'), 20, plat) ],
-    [ mt('_rbrowse_medium'),     filFSelect('med',  mt('_rbrowse_medium'), 10, med) ]
+    [ mt('_rbrowse_medium'),     filFSelect('med',  mt('_rbrowse_medium'), 10, med) ],
+    [ mt('_rbrowse_animation'),
+      filFSelect('ani_story', mt('_rbrowse_ani_story'), 5, ani),
+      filFSelect('ani_ero',   mt('_rbrowse_ani_ero'),   5, ani)
+    ]
   ];
 }
 
