@@ -10,8 +10,8 @@ use VNDB::Func 'gtintype';
 our @EXPORT = qw|dbReleaseGet dbReleaseRevisionInsert|;
 
 
-# Options: id vid pid rev unreleased page results what med sort reverse
-#   date_before date_after plat lang type minage search resolution freeware doujin
+# Options: id vid pid rev unreleased page results what med sort reverse date_before date_after 
+#   plat lang type minage search resolution freeware doujin ani_story ani_ero
 # What: extended changes vn producers platforms media
 # Sort: title released minage
 sub dbReleaseGet {
@@ -33,6 +33,8 @@ sub dbReleaseGet {
     defined $o{date_before} ? ( 'rr.released <= ?' => $o{date_before} ) : (),
     defined $o{date_after}  ? ( 'rr.released >= ?' => $o{date_after} ) : (),
     defined $o{resolution}  ? ( 'rr.resolution IN(!l)' => [ ref $o{resolution} ? $o{resolution} : [$o{resolution}] ] ) : (),
+    defined $o{ani_story}   ? ( 'rr.ani_story IN(!l)'  => [ ref $o{ani_story}  ? $o{ani_story}  : [$o{ani_story}]  ] ) : (),
+    defined $o{ani_ero}     ? ( 'rr.ani_ero IN(!l)'    => [ ref $o{ani_ero}    ? $o{ani_ero}    : [$o{ani_ero}]    ] ) : (),
     defined $o{unreleased}  ? ( 'rr.released !s ?' => [ $o{unreleased} ? '>' : '<=', strftime('%Y%m%d', gmtime) ] ) : (),
     $o{lang} ? (
       'rr.id IN(SELECT irl.rid FROM releases_lang irl JOIN releases ir ON ir.latest = irl.rid WHERE irl.lang IN(!l))', => [ ref $o{lang} ? $o{lang} : [ $o{lang} ] ] ) : (),
